style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: "Monserrat", sans-serif;
}

body {
    background-color: #EAECEE
}

ul {
    list-style-type: none;
    padding: 0;
}

a {
    text-decoration: none;
    color: #EAECEE;
}

/* Utility */

.section-header {
    text-align: center;
    margin: 20px 20px 50px 20px;
}

.section-header-secondary {
    color: #3490dc;
}

.section-px {
    padding: 50px 0;
}

.text-color-primary {
    color:#3490dc;
}

.text-color-light {
    color: #EAECEE;
}

.background-dark {
    background-color: #28282B;
    color: white;
}


/* End of Utility styling */





/* .section-my {
    margin-top: 50px;
} */

/* Header styling */

header {
    overflow: hidden;
}


.navbar {
    height: 100px;
    /* background-color: #EAECEE; */
    /* border-bottom: solid 1px #3490dc; */

}


/* .logo-container img {
    height: 100px;
    width: 100px;
} */

/* #home {
    margin-left: 50px;
} */

.active {
    color: red;
}

/* .logo-container img {
    border-radius: 50%;
} */

.hero {
    position: relative;
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: url(https://media.istockphoto.com/id/1332858442/photo/high-voltage-electric-power-lines-at-sunset.jpg?b=1&s=170667a&w=0&k=20&c=LTIqCnb89TQlgBu_hYIQQL0diMwyHQ1eIGk1wLFLMvU=);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
    filter: brightness(25%);
}

.hero-content {
    position: relative;
    font-family: "Monserrat", sans-serif;
    color: white;
    text-align: center;
    margin: 0.625rem;
 }
 
 .hero-title {
    font-size: 3rem;
    font-weight: 600;
    margin-bottom: 0;
 }
 .hero-subtitle {
    font-size: 2rem;
    font-weight: 200;
    margin-top: 1rem;
 }
 
 .hero-button {
    background-color: #3490dc;
    color: white;
    border: 1px solid #3490dc;
    border-radius: 25px;
    margin-top: 5rem;
    padding: 0.9375rem 1.875rem;
    font-family: "Monserrat", sans-serif;
    font-size: 1.125rem;
    font-weight: 200;
    cursor: pointer;
 }
 
 .hero-button:hover {
    opacity: 0.9;
    border: 1px solid #3490dc;
 
}

/* End of header styling */


/* About Section */
.about-us {
    padding: 10px;
    /* background-color: #EAECEE; */
    /* height: 80vh; */
    
}


/* .about-content-conatainer {
    display: flex;
} */

.about-img-container {
    width: 50%;
}

.about-content {
    width: 50%;
    align-items: center;
    text-align: center;
    justify-content: center;
    padding: 10px;

}


/* Services section */
.services {
    border-top: solid 1px #EAECEE;
}

.services-card {
   filter: brightness(90%);
   height: 18rem;
   width: 18rem;
   margin: auto;
}

.services-card:hover {
   filter: brightness(100%);
   transform: scale(1.1);
   border-color: #3490dc;

}

.services-card:hover i {
    color: #3490dc;

}

.services-card-body i {
    margin: 10px;
}



/* Clients section */
.clients-container {
    border-top: 1px solid #EAECEE;
}


.clients-content {
    display: flex;
    justify-content: space-evenly;
    

}


.clients-img-card img {
    width: 150px;
    height: 150px;
    opacity: 0.3;
    transition: 0.3s;

}

.clients-img-card img:hover {
    opacity: 1;
}


/* Contact section */

.contact-us {
    border-top: 1px solid #EAECEE;
    background-color: #EAECEE;
}

.contact-us-content {
    display: flex;
    justify-content: space-around;
    padding: 10px;
    
}

.info {
    display: flex;
    margin: 50px;
    border-bottom: 1px solid #EAECEE;
}

.info:hover i {
    color: #3490dc;
}

.info i {
    margin-right: 10px;
}

.info p {
    margin-left: 10px;
    font-size: 20px;
    color: #5e6163;
}

.social a {
    margin-left: 10px;
    font-size: 20px;
    color: #5e6163;
}

.social a:hover {
    transform: scale(1.5);
}


/* Footer section */

#main-footer {
    padding: 20px 0 0 0;
}

#main-footer .footer-content-container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    
    
}

#main-footer .footer-content-container .footer-contents {
    padding: 10px 0;
    margin: 10px;
    
}

#main-footer .footer-content-container .footer-contents h3 {
    margin-bottom: 20px;
    
}

#main-footer .footer-content-container .footer-contents ul li {
    margin-bottom: 20px;
}

/* #main-footer .footer-content-container .footer-contents ul li a {
    text-align: center;
} */

#main-footer .footer-content-container .footer-contents a i {
    margin-right: 20px;
}



#main-footer .footer-content-container .copyright-container {
    grid-column: 1 / span 4;
    text-align: center;
    border-top: 1px solid #444;
    padding: .5rem 0 0 0;
}


/* Mobile and Tablet styling */
@media (max-width: 992px) {
    .navbar {
        height: auto;
        padding: 0;

    
    }

    .hero-title {
        margin-top: 100px;

        
    }

    .about-content-conatainer {
        display: block;
    }

    .about-img-container {
        width: 100%;
    }
    
    .about-content {
        width: 100%;

    
    }

    .services-card-container {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(3, 1fr);
        grid-column-gap: 0px;
        grid-row-gap: 0px;
        padding-left: 50px;
          
    }






    .contact-us-content {
        display: block;
        
    }

    .contact-us-content .lottie-player-container lottie-player {
        margin: auto;
        
    }

    #main-footer .footer-content-container {
        display: block;
        
        
    }


}

@media (max-width: 768px) {

    .services-card-container {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(3, 1fr);
        grid-column-gap: 0px;
        grid-row-gap: 0px;
        padding-left: 40px;
          
    }
    
    
    .clients-content {
        /* display: block; */
        /* width: 5rem;
        height: 5rem; */
    
    }

    /* .clients-img-card {
        margin-right: auto;
        margin-left: auto;
        
    } */

    .clients-img-card img {
        width: 8rem;
        margin-bottom: 20px;
        
    }

    /* .contact-us-content {
        display: block;
        
    }

    .contact-us-content .lottie-player-container lottie-player {
        margin: auto;
        
    } */



}

@media (max-width: 576px) { 

    .services-card-container {
        display: block;
        padding: 0;
    }

    .services-card {
        width: 100%;
        margin-left: auto;
    }
    
    .clients-content {
        display: grid;
        margin: auto;
        /* width: 50%; */
        padding: 10px;
        align-items: center;
    }

    .clients-img-card {
        margin-left: auto;
    }

    .contact-us-content {
        display: grid;
        /* margin-bottom: 10px; */
        
    }

    .contact-us-content .info p {
        font-size: 16px;
        
    }
}

